fix: semantic release config

--- a/.releaserc
+++ b/.releaserc
@@ -6,6 +6,14 @@
     "gradle-semantic-release-plugin",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    "@semantic-release/git"
+    [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "gradle.properties",
+            "CHANGELOG.md"
+          ]
+        }
+      ]
   ]
 }
