fix: semantic release config

--- a/.releaserc
+++ b/.releaserc
@@ -4,6 +4,7 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "gradle-semantic-release-plugin",
+    "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     ["@semantic-release/git", {
       "assets": ["gradle.properties","CHANGELOG.md"],
